==================
 iCal4j - Changes
==================

0.9.16

 - Applied fixes for bugs #1297830, #1300305, #1300728, #1305610
 
 - removed final modifiers in CalendarBuilder to allow for subclassing
 
 - added initial capacity constructors to lists for optimisations
 
 - fixed bug where DateProperty.setDate() was not correctly updating
 timezones of new date values
 
 - corrected bug in calculating negative durations
 
 - added precision rounding to date/date-time instances to fix comparisons
 and equality checking
 
 - added convenience methods for creating date/calendar instances
 
 - fixed recurrence rules to use correct timezones
 
 - Fixed potential NullPointerException in TimeZone
 
 - Fixed invalid date values in Date properties
 
 - Removed redundant methods in DateProperties and general clean up
 
 - TzId now correctly implements Escapable interface


0.9.15

 - Fixed DateProperties to correctly call super.validate() in validation
 
 - Fix applied to Recur.getMonthDayVariants() to correctly set the month of
 candidate dates. Also fixed to ignore dates prior to seed date.
 
 - Added encoding/decoding of URIs

 - Fixed parser to allow arbitrary ordering of VTIMEZONE observances/properties.
 
 - Now allows for additional whitespace between properties.
 
 - Introduced a custom timezone implementation for use with iCalendar objects
 
 - Introduced a timezone registry with support for alternative implementations


0.9.14:

 - Reimplemented ParameterFactory and PropertyFactory with improved design
 
 - Added a duration type (Dur) for represeting durations in properties Duration
 and Trigger, and type Period. (DurationFormat deprecated).
 
 - ParameterList.add() now automatically removes from the list all other parameters
 with the same name
 
 - Added serialVersionUID to all properties, parameters and types
 
 - Added utc offset type (UtcOffset) for representing utc offsets (UtcOffsetFormat
 deprecated)
 