@@ -8,7 +8,7 @@
 <project name="iCal4j" basedir="." default="package">
 
 	<!-- Project details -->
-    <property name="project.version" value="0.9.15"/>
+    <property name="project.version" value="0.9.16"/>
 	
 	<!-- Project paths -->
     <property name="source.dir" location="source"/>
