@@ -267,6 +267,15 @@
                     </ul>
                 </td>
             </tr>
+            <tr>
+                <th>0.9.16</th>
+                <td style="width:100%">
+                    <ul>
+                        <li>Interim release</li>
+                        <li>Includes a number of critical bug fixes (see CHANGELOG for further details)</li>
+                    </ul>
+                </td>
+            </tr>
             <tr style="color: silver">
                 <th style="white-space:nowrap">1.0 beta</th>
                 <td style="width:100%">
